# EU-Regulatory-Intelligence-Agent

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: analyst.py  critic.py  orchestrator.py  planner.py  researcher.py  synthesizer.py
api/: main.py  routes.py
compliance/: risk_classifier.py  transparency.py  xai.py
config/: settings.py
data/: annex_iii_high_risk_list.json
data/evals/: baseline_results.json  judge_results.json  qa_pairs_manual.json
db/: client.py
evals/: judge.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  main.tsx  print.css
frontend/src/components/: AgentPipeline.tsx  Layout.tsx  MetricCard.tsx  RiskBadge.tsx
project flows/: deployment-architecture.html  project1-data-guide.html  project1-europe-ready.html  project1-master-buildplan.html  research-agent-architecture-flow.html
rag/: ingest.py  retriever.py
scripts/: aws_setup.sh  ecs-task-definition.json  ingest_demo_corpus.py  ingest_euaiact.py  ingest_manual.py  migrate_fts_multilingual.py  run_ingest.py  run_ragas_baseline.py
scripts/sql/: create_exec_sql_rpc.sql  fts_migration_manual.sql  phase4_gdpr_schema.sql  phase4_transparency_schema.sql
tests/: conftest.py  test_audit_and_gdpr.py  test_mcp_servers.py  test_orchestrator.py  test_researcher.py  test_retriever.py
tools/: a2a_agents.py  citation_mcp.py  embedder.py  mcp_client.py  scraper_mcp.py
(+12 files in other folders)
