[project]
name = "eu-regulatory-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.25",
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langdetect>=1.0.9",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "mcp>=1.26.0",
    "openai>=2.29.0",
    "pydantic>=2.9.0",
    "pypdf>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "ruff>=0.7.0",
    "sentence-transformers>=5.3.0",
    "supabase>=2.28.2",
    "tavily-python>=0.5.0",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.30.0",
    # CPU-only torch — saves ~5 GB vs CUDA build. ECS Fargate has no GPU.
    "torch>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
